--- a/src/views/tabs.jade
+++ b/src/views/tabs.jade
@@ -9,39 +9,9 @@ app:tabs
       div
         a Gallery
       form.well
-        h3 Step 1: Calcuate a total quote
-        div
-          span.text
-          | Number of square feet:
-          input.input-small
-          a (what's my square footage?)
-        div
-          span.text
-            | Sealer:
-          input.input-small
-        div
-          span.text
-            | Grouting:
-          input.input-small
-        div
-          span.text
-            | Your total is: $__
-        button.btn.btn-primary
-          | Add to cart 
-        //- CHECK html conventions correct?
-        h3 Step 2: Upload pictures
-        p How does the existing area currently look like? 
-        button Upload pictures
-        h3 Step 3: Schedule a date
-        p When would you like for us to do the installation?
-        h3 Step 4: Your contact info
-        span.text Phone
-        input
-        span.text Email
-        input
-        span.text-box Message
-        input
-
+        ng:include(src="'/views/quote-calculator.html'")
+        ng:include(src="'/views/contact-form.html'")
+    
 
   app:tab(caption='Shower')
     section(ng-controller='gitHubController as controller')
