Added models: quotes, contacts. Need to set up tests see issue 22

--- a/src/views/site.jade
+++ b/src/views/site.jade
@@ -1,5 +1,5 @@
 .jumbotron
-	.container
+	//- .container
 		h1
 			//- a(href='http://angularjs.org', target='_blank') Kris Tile Service Inc.
 			Kris Tile Service Inc.
@@ -9,7 +9,7 @@
 			| Call us today
 			//- a(href='https://twitter.com/CaryLandholt', target='_blank') {{'CaryLandholt' | twitterfy}}
 .container
-	nav.navbar.navbar-default(role="navigation")
+	//- nav.navbar.navbar-default(role="navigation")
 		.collapse.navbar-collapse
 			ul.nav.navbar-nav
 				li.active
